# c-programming-language

./: CMakeLists.txt  README.md
basis/: array.c  count.c  count_2.c  function.c  hello.c  max_length.c  max_length_2.c  row_count.c  symbolic_constant.c  temperature.c  temperature_2.c  temperature_3.c  text_copy.c  text_copy_2.c  word_count.c
basis/exercise/: 2.c  e10.c  e12.c  e13.c  e15.c  e3.c  e4.c  e5.c  e6.c  e7.c  e8.c  e8_2.c  e9.c
control/: atoi.c  binary_search.c  reverse.c  shell_sort.c
function/: string_.c
