cmake_minimum_required(VERSION 3.17)
project(c_programming_language C)

set(CMAKE_C_STANDARD 99)

add_executable(c_programming_language basis/hello.c)

add_executable(2 basis/exercise/e2.c)

add_executable(temperature basis/temperature.c)

add_executable(temperature_2 basis/temperature_2.c)

add_executable(e3 basis/exercise/e3.c)

add_executable(e4 basis/exercise/e4.c)

add_executable(temperature_3 basis/temperature_3.c)

add_executable(e5 basis/exercise/e5.c)

add_executable(symbolic_constant basis/symbolic_constant.c)

add_executable(text_copy basis/text_copy.c)

add_executable(text_copy_2 basis/text_copy_2.c)

add_executable(e6 basis/exercise/e6.c)

add_executable(e7 basis/exercise/e7.c)

add_executable(count basis/count.c)

add_executable(count_2 basis/count_2.c)

add_executable(row_count basis/row_count.c)

add_executable(e8 basis/exercise/e8.c)

add_executable(e8_2 basis/exercise/e8_2.c)

add_executable(e9 basis/exercise/e9.c)

add_executable(c10 basis/exercise/e10.c)

add_executable(word_count basis/word_count.c)

add_executable(e12 basis/exercise/e12.c)

add_executable(array basis/array.c)

add_executable(e13 basis/exercise/e13.c)

add_executable(function basis/function.c)

add_executable(e15 basis/exercise/e15.c)

add_executable(max_length basis/max_length.c)

add_executable(max_length_2 basis/max_length_2.c)

add_executable(binary_search control/binary_search.c)

add_executable(atoi control/atoi.c)

add_executable(shell_sort control/shell_sort.c)

add_executable(reverse control/reverse.c)

add_executable(string_ function/string_.c)
